# WorldClock

./: start_timezone_widget.vbs  timezone_widget.pyw
cpp/: CMakeLists.txt  README.md  build.bat
cpp/resources/: world_clock.rc
cpp/src/: main.cpp
